# local_ai_app

./: .gitignore  Makefile  PROGRESS.md  README.md  pyproject.toml
config/: app.example.yaml
datasets/finetuning/: ticket_classification.jsonl
datasets/red_team/: red_team_prompts.jsonl
docs/modules/: 01_local_llm_systems_thinking.md  02_mac_local_ai_development_environment.md  03_local_model_selection_and_benchmarking.md  04_quantization_context_and_memory_math.md  05_serving_local_models.md  06_5_serving_concurrency_batching_caching.md  06_python_client_architecture.md  07_prompt_engineering_for_small_local_models.md  08_5_conversation_and_context_management.md  08_structured_output_and_extraction.md  09_embeddings_from_first_principles.md  10_vector_search_and_local_vector_databases.md  11_rag_v1_naive_rag.md  12_rag_v2_production_retrieval.md  13_rag_v3_evaluation_citations_guardrails.md  14_tool_calling_and_deterministic_execution.md  15_agentic_workflows_without_chaos.md  16_mcp_and_local_tool_ecosystems.md  17_local_coding_assistants.md  18_multimodal_local_applications.md  19_finetuning_lora_and_adapters.md  20_inference_optimization_under_8_24gb_ram.md  21_observability_and_tracing.md  22_security_privacy_and_red_teaming.md  23_packaging_and_deployment.md
docs/runbooks/: operations_runbook.md
evals/golden_sets/: classification.jsonl  code.jsonl  extraction.jsonl  rag.jsonl  summarization.jsonl  tool_calling.jsonl
evals/prompt_regression/: extraction_cases.jsonl
evals/rag_eval/: nimbus_golden_set.jsonl
models/: MODEL_CATALOG.md
notebooks/: 01_local_llm_basics.ipynb  02_mac_environment_setup.ipynb  03_model_benchmarking.ipynb  04_quantization_context_memory_math.ipynb  05_serving_local_models.ipynb  06_5_serving_concurrency_batching_caching.ipynb  06_python_client_architecture.ipynb  07_prompt_engineering.ipynb  08_5_conversation_and_context_management.ipynb  08_structured_output_and_extraction.ipynb  09_embeddings_from_first_principles.ipynb  10_vector_search_and_local_vector_databases.ipynb  11_rag_v1_naive_rag.ipynb  12_rag_v2_production_retrieval.ipynb  13_rag_v3_evaluation_citations_guardrails.ipynb  14_tool_calling_and_deterministic_execution.ipynb  15_agentic_workflows_without_chaos.ipynb  16_mcp_and_local_tool_ecosystems.ipynb  17_local_coding_assistants.ipynb  18_multimodal_local_applications.ipynb  19_finetuning_lora_and_adapters.ipynb  20_inference_optimization_under_8_24gb_ram.ipynb  21_observability_and_tracing.ipynb  22_security_privacy_and_red_teaming.ipynb  23_packaging_and_deployment.ipynb
projects/: PROJECT_TEMPLATE.md
projects/01_structured_extraction/: ARCHITECTURE.md  OUTRO.md  PROPOSAL.md  README.md  REPORT.md
projects/02_production_rag/: ARCHITECTURE.md  OUTRO.md  PROPOSAL.md  README.md  REPORT.md
projects/03_engineering_assistant/: ARCHITECTURE.md  OUTRO.md  PROPOSAL.md  README.md  REPORT.md
projects/04_multimodal_document_analyst/: ARCHITECTURE.md  OUTRO.md  PROPOSAL.md  README.md  REPORT.md  build_fixture.py
projects/05_local_inference_gateway/: ARCHITECTURE.md  OUTRO.md  PROPOSAL.md  README.md  REPORT.md
reports/: model_scorecard_TEMPLATE.md  module_01_local_llm_observations.md  module_02_environment_report.md  module_03_local_model_selection_report.md  module_04_quantization_context_memory_report.md  module_05_runtime_serving_matrix.md  module_06_5_serving_concurrency_report.md  module_06_python_client_architecture_report.md  module_07_prompt_comparison.md  module_08_5_conversation_memory_report.md  module_08_structured_output_reliability_report.md  module_09_embedding_model_report.md  module_10_vector_store_comparison_report.md  module_11_naive_rag_report.md  module_12_production_retrieval_report.md  module_13_rag_evaluation_report.md  module_14_tool_calling_report.md  module_15_agentic_workflows_report.md  module_17_coding_assistant_report.md  module_18_multimodal_report.md  module_19_finetuning_report.md  module_20_inference_optimization_report.md  module_21_observability_report.md  module_22_security_report.md  module_23_packaging_report.md  tool_ecosystem_security_notes.md
scripts/module_01/: lab_1_1_multi_model_run.py  lab_1_2_long_prompt_stress_test.py  lab_1_3_small_model_failure_analysis.py  ollama_probe.py  token_estimate.py
scripts/module_02/: mac_environment_check.py  model_cache.py  setup_mac.sh  smoke_test_llamacpp_server.py  smoke_test_mlx.py  smoke_test_ollama.py  smoke_test_runtimes.py
scripts/module_03/: run_benchmark.py
scripts/module_04/: lab_4_1_quantization_comparison.py  (+6 more)
(+292 files in other folders)
