[project]
name = "local-llm-ai-course"
version = "0.1.0"
description = "Production AI App Development with Local LLMs on Mac - curriculum, notebooks, and packages"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.9",
    "httpx>=0.28",
    "numpy>=2.1",
    "pandas>=2.2",
    "rich>=13.9",
    "typer>=0.15",
    "openai>=1.55",
    "chromadb>=1.5.9",
    "onnxruntime<1.20",
    "lancedb>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "jupyter>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["packages", "scripts", "tests"]
pythonpath = ["packages", "scripts/module_01", "scripts/module_02", "scripts/module_03", "scripts/module_04", "scripts/module_05", "scripts/module_06_5", "scripts/module_07", "scripts/module_08", "scripts/module_08_5", "scripts/module_09", "scripts/module_10", "scripts/module_11"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
