[project]
name = "local-llm-ai-course"
version = "0.1.0"
description = "Production AI App Development with Local LLMs on Mac - curriculum, notebooks, and packages"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.9",
    "httpx>=0.28",
    "numpy>=2.1",
    "pandas>=2.2",
    "rich>=13.9",
    "typer>=0.15",
    "openai>=1.55",
    "chromadb>=1.5.9",
    "onnxruntime<1.20",
    "lancedb>=0.34.0",
    # --- Heavy/optional deps for real model adapters, intentionally NOT installed here ---
    # This dev machine has no LLM runtime or model weights installed on purpose (limited
    # disk/memory - see memory/project_dev_machine_constraints.md). The adapters below already
    # lazy-import these inside function bodies and are fully unit-tested via injected fakes;
    # installing the package is only needed to run them for real on a resourced machine.
    #
    # To enable one: uncomment its line, run `uv sync`, then follow the "Enabling this for
    # real" section in the docstring of the file listed next to it.
    # "mlx-lm>=0.19",                # MLXRuntime - packages/local_ai_core/runtimes/mlx.py
    # "sentence-transformers>=3.0",  # SentenceTransformersEmbedder, CrossEncoderReranker -
    #                                 # packages/local_ai_rag/embeddings/sentence_transformers_embedder.py,
    #                                 # packages/local_ai_rag/rerankers/cross_encoder_reranker.py
    # "transformers>=4.46",          # HFTokenizerCounter - scripts/module_01/token_estimate.py
    # "mlx-vlm>=0.1",                # a real VisionLanguageModel adapter -
    #                                 # packages/local_ai_core/multimodal/vlm.py
    #
    # pymupdf/pdfplumber/pillow are real libraries, not LLM runtimes or model weights (same
    # reasoning as Module 10's chromadb/lancedb) - installed and used for real.
    "pymupdf>=1.28.0",
    "pdfplumber>=0.11.10",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "jupyter>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["packages", "scripts", "tests"]
pythonpath = ["packages", "scripts/module_01", "scripts/module_02", "scripts/module_03", "scripts/module_04", "scripts/module_05", "scripts/module_06_5", "scripts/module_07", "scripts/module_08", "scripts/module_08_5", "scripts/module_09", "scripts/module_10", "scripts/module_11", "scripts/module_12", "scripts/module_13", "scripts/module_14", "scripts/module_15", "scripts/module_16", "scripts/module_17", "scripts/module_18", "scripts/module_19"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
